--- a/code/main.css
+++ b/code/main.css
@@ -1,10 +1,3 @@
-body {
-	display: flex;
-	height: 100vh;
-	justify-content: center;
-	align-items: center;
-}
-
 /* Variables */
 :root {
 	--radius : 10px;
@@ -22,71 +15,41 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 
-
-
-
 /* Contenedor principal del formulario */
 .form {
+	width: 90%;
 	max-width: 400px;
-	margin: 20px;
-	padding: 15px;
+	margin: 50px auto;
+	padding: 20px;
 	border-radius: var(--radius);
 	font-family: tahoma, sans-serif;
-	font-size: 19px;
+	font-size: 1.2em;
 	box-shadow: 0 0 10px #0005;
-	display: flex;
-	flex-wrap: wrap;
-	flex-grow: 1;
+	display: grid;
+	grid-template-rows: repeat(3, var(--proportion));
+	gap: 15px;
 }
 
-
-
-
-
-/* propiedades globales para los contenedores */
-.amount,
-.iva,
-.result {
-	width: 100%;
-	height: var(--proportion);
+/* Contenedores dentro del formulario */
+.form__container {
 	border-radius: var(--radius);
-	margin: 10px;
 	background: var(--colorPrimary);
 	display: flex;
-	overflow: hidden;
-	/*outline: 1px solid red;*/
 }
 
 
-
-
-
-/* propiedades  globales de input */
-.amount__input,
-.iva__input {
+/* campos del formulario*/
+.form__input {
 	border: none;
-	border-radius: var(--radius);
 	outline: none;
+	border-radius: var(--radius);
 	background: var(--colorPrimary);
 	transition: background .1s;
-}
-
-
-
-
-
-/* Input de cantidad */
-.amount__input {
-	height: 100%;
 	padding: 0 15px;
 	flex-grow: 1;
-
 }
 
-.amount__input:hover,.iva__input:hover{ background: var(--colorHover); }
-.amount__input:focus,.iva__input:focus { background: var(--colorHover); }
-
-.amount__iconDelete {
+.form__btnDelete {
 	width: var(--proportion);
 	font-size: 30px;
 	transform: rotate(45deg);
@@ -99,27 +62,27 @@ input[type=number]::-webkit-outer-spin-button {
 	user-select: none;
 }
 
-.amount__iconDelete:hover { 
+.form__btnDelete:hover { 
 	transform: rotate(45deg) scale(1.2);
 	color: #333;
 }
 
-
-
-
-
-/* Input de iva */
-.iva__input {
+#percIva {
 	width: var(--proportion);
 	text-align: center;
+	flex-grow: 0;
 }
 
-.iva__symbol { 
+.form__symbol { 
 	line-height: var(--proportion);
 	margin-right: 10px;
 }
 
-.iva__amount {
+.form__input:hover,
+.form__input:focus { background: var(--colorHover); }
+
+.form__amountIva,
+.form__result {
 	padding: 0 15px;
 	background: var(--colorSecundary);
 	border-radius: var(--radius);
@@ -127,27 +90,7 @@ input[type=number]::-webkit-outer-spin-button {
 	flex-grow: 1;
 }
 
-
-
-
-
-/* Caja de resultado */
-.result__total {
-	background: var(--colorSecundary);
-	border-radius: var(--radius);
-	flex-grow: 1;
-	line-height: var(--proportion);
-	padding: 0 15px;
-}
-
-.result-checkbox {
-	width: var(--proportion);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.ckeckbox { 
-	width: 18px; 
-	height: 18px;
+.form__ckeckbox {
+	margin: 0 20px;
+	width: 18px;
 }
